test_src/compiler_errors/types/binary/OrFloatError4.b
class OrFloatError4 {
    void test() {
        var value = 14.0;
        println(value |= 42);
    }
}
